--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.1"
+    "node-cron": "^3.0.2"
   }
 }
